--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
 </div>
 
 <script>
-window.onload = function(){
 
 const slides = document.querySelectorAll(".slide");
 let current = 0;
 
-window.startShow = function(){
+function startShow(){
 
     document.querySelector(".opening").style.display = "none";
     document.querySelector(".slideshow").style.display = "block";
@@ -58,11 +57,9 @@ window.startShow = function(){
         slides[current].classList.remove("active");
         current = (current + 1) % slides.length;
         slides[current].classList.add("active");
-    },2000);
-
+    }, 3000);
 }
 
-}
 </script>
 
 </body>
