Update image sources in slideshow

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 <div class="slideshow">
     <div class="overlay"></div>
 
-    <img src="foto/1.jpeg" class="slide">
-    <img src="foto/2.jpeg" class="slide">
-    <img src="foto/3.jpeg" class="slide">
-    <img src="foto/4.jpeg" class="slide">
-    <img src="foto/5.jpeg" class="slide">
-    <img src="foto/6.jpeg" class="slide">
-    <img src="foto/7.jpeg" class="slide">
-    <img src="foto/8.jpeg" class="slide">
-    <img src="foto/9.jpeg" class="slide">
-    <img src="foto/10.jpeg" class="slide">
-    <img src="foto/11.jpeg" class="slide">
-    <img src="foto/12.jpeg" class="slide">
-    <img src="foto/13.jpeg" class="slide">
-    <img src="foto/14.jpeg" class="slide">
+    <img src="1.jpeg" class="slide">
+    <img src="2.jpeg" class="slide">
+    <img src="3.jpeg" class="slide">
+    <img src="4.jpeg" class="slide">
+    <img src="5.jpeg" class="slide">
+    <img src="6.jpeg" class="slide">
+    <img src="7.jpeg" class="slide">
+    <img src="8.jpeg" class="slide">
+    <img src="9.jpeg" class="slide">
+    <img src="10.jpeg" class="slide">
+    <img src="11.jpeg" class="slide">
+    <img src="12.jpeg" class="slide">
+    <img src="13.jpeg" class="slide">
+    <img src="14.jpeg" class="slide">
 </div>
 
 <script>
