--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 
 <audio id="bgm" src="sound.mp3" loop></audio>
+    <div class="rotate-warning">
+    <p>📱 Silakan putar HP ke mode Landscape</p>
+</div>
 
 <div class="opening">
     <div class="opening-box">
